--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "axios": "^1.4.0",
+        "jwt-decode": "^4.0.0",
         "lucide-react": "^0.526.0",
         "next": "latest",
         "react": "latest",
